# HViperVM

./: .gitignore  CHANGES  README.md  TODO  ViperVM.cabal
ViperVM/: Buffer.hs  Compiler.hs  Data.hs  Event.hs  Kernel.hs  KernelInterface.hs  KernelSet.hs  Platform.hs  Runtime.hs  RuntimeInternal.hs  Scheduler.hs  Task.hs  Transfer.hs  View.hs
ViperVM/Backends/: OpenCL.hs
ViperVM/Backends/OpenCL/: Event.chs  Loader.hs  Query.chs  Types.chs
ViperVM/Data/: Vector.hs
ViperVM/Internals/: Logging.hs  Requests.hs  StartStop.hs  Structures.hs
ViperVM/Logging/: Logger.hs  NullLogger.hs  TextLogger.hs
ViperVM/Parsing/: Parser.hs
ViperVM/Scheduling/: Composed.hs  DataManager.hs  Default.hs  EagerKernelCompiler.hs  EagerScheduler.hs  Executer.hs  KernelManager.hs  StartStop.hs  TaskManager.hs  TaskRequestManager.hs
apps/: Bench.hs  BufferManagerTest.hs  GranularityAdaptation.hs  GraphReducer.hs  GraphTest.hs  KernelExecOpenCLTest.hs  KernelObjectOpenCLTest.hs  LispCL.hs  LispOCL.hs  LispParser.hs  LispSOCL.hs  LispTest.hs  ParseTest.hs  PlatformInfo.hs  PlatformTest.hs  RegionLockManagerTest.hs  RegionManagerTest.hs  RegionTransferManagerTest.hs  RuntimeTest.hs  Split.hs  TransferManagerTest.hs
apps/samples/lisp/: Sample.lisp
data/Codelets/Blas/: Lu.vvm
examples/: Makefile  ParseTest.hs  RuntimeTest.hs  Test.hs
lib/: ViperVM.hs
lib/ViperVM/: Buffer.hs  BufferManager.hs  Data.hs  DataGraph.hs  DataManager.hs  Event.hs  Executer.hs  Graph.hs  InstanceManager.hs  Kernel.hs  KernelInterface.hs  KernelManager.hs  KernelSet.hs  Logging.hs  Memory.hs  MemoryManager.hs  Platform.hs  Region.hs  RegionManager.hs  RequestManager.hs  Requests.hs  Runtime.hs  RuntimeInternal.hs  StartStop.hs  Structures.hs  Task.hs  Transfer.hs  TransferManager.hs  UserInterface.hs  View.hs
lib/ViperVM/Backends/: OpenCL.hs
lib/ViperVM/Backends/Common/: Buffer.hs
lib/ViperVM/Backends/Host/: Buffer.hs  Driver.hs  Hwloc.hs  Link.hs  Memory.hs
lib/ViperVM/Backends/OpenCL/: Buffer.hs  CommandQueue.chs  CommandQueue.hs  Context.chs  Context.hs  Driver.hs  Event.chs  Event.hs  Kernel.hs  Link.hs  Loader.hs  Memory.chs  Memory.hs  Processor.hs  Program.chs  Program.hs  Query.chs  Query.hs  Types.chs  Types.hs
lib/ViperVM/Common/: Logger.hs  Region.hs  Util.hs
lib/ViperVM/Graph/: Builtins.hs  Graph.hs  ParallelReducer.hs
lib/ViperVM/Interfaces/: CommandGraph.hs
lib/ViperVM/Internals/: BufferManager.hs  DataManager.hs  InstanceManager.hs  KernelManager.hs  Memory.hs  RegionManager.hs  RequestManager.hs  Requests.hs  StartStop.hs  Structures.hs
lib/ViperVM/Logging/: TextLogger.hs
lib/ViperVM/Parsing/: Lisp.hs  Parser.hs  Prettify.hs
lib/ViperVM/Platform/: Buffer.hs  BufferManager.hs  Compilation.hs  Configuration.hs  DataDesc.hs  DataInstance.hs  Descriptor.hs  Event.hs  Kernel.hs  KernelConstraint.hs  KernelExecutionResult.hs  KernelManager.hs  KernelParameter.hs  Link.hs  LinkCapabilities.hs  LinkCapability.hs  LinkPeer.hs  Logger.hs  Memory.hs  MemoryManager.hs  MemoryPeer.hs  Object.hs  ObjectKernel.hs  ObjectManager.hs  Platform.hs  PlatformEvent.hs  Primitive.hs  Proc.hs  Processor.hs  ProcessorCapabilities.hs  Program.hs  Region.hs  RegionLockManager.hs  RegionManager.hs  RegionTransfer.hs  RegionTransferManager.hs  Runtime.hs  SharedObject.hs  SharedObjectManager.hs  Source.hs  (+2 more)
lib/ViperVM/Platform/Objects/: Matrix.hs  Vector.hs
lib/ViperVM/Platform/Peer/: KernelPeer.hs  LinkPeer.hs  MemoryPeer.hs  PlatformPeer.hs  ProcPeer.hs  ProgramPeer.hs
lib/ViperVM/Reducer/: Graph.hs
lib/ViperVM/Runtime/: BufferManager.hs  Compilation.hs  Compiler.hs  Data.hs  DefaultRuntime.hs  DefaultScheduler.hs  Descriptor.hs  GenericScheduler.hs  Kernel.hs  LockMode.hs  Logger.hs  MemoryManager.hs  Nodes.hs  ObjectKernel.hs  Platform.hs  Primitive.hs  Processor.hs  Runtime.hs  Scheduler.hs  Task.hs  Transfer.hs  TransferResult.hs  UserInterface.hs  Worker.hs
lib/ViperVM/Runtime/Memory/: CompositeObject.hs  Descriptor.hs  MetaMemory.hs  MetaObject.hs  Object.hs  ObjectManager.hs  SharedObject.hs  Transfer.hs  VirtualMemory.hs  VirtualObject.hs
lib/ViperVM/Runtime/Memory/MetaObjects/: Matrix.hs
lib/ViperVM/Runtime/Memory/Objects/: Matrix.hs  Vector.hs
lib/ViperVM/Runtime/Scheduling/: Single.hs
lib/ViperVM/STM/: Common.hs  TMap.hs  TSet.hs
lib/ViperVM/Scheduling/: DataManager.hs  Default.hs  Eager.hs  EagerKernelCompiler.hs  EagerScheduler.hs  MemoryManager.hs  RoundRobin.hs  Single.hs  TaskManager.hs  TaskRequestManager.hs
lib/ViperVM/VirtualPlatform/: CompositeObject.hs  Descriptor.hs  FunctionalKernel.hs  MetaKernel.hs  MetaMemory.hs  MetaObject.hs  Object.hs  Task.hs  Transfer.hs
lib/ViperVM/VirtualPlatform/MetaObjects/: Matrix.hs
lib/ViperVM/VirtualPlatform/Objects/: Matrix.hs  Vector.hs
lib/ViperVM/old/: BufferManager.hs  RegionManager.hs  Requests.hs  Runtime.hs  StartStop.hs  Structures.hs
lib/ViperVM/old/Logging/: Logger.hs
lib/ViperVM/old/Scheduling/: Composed.hs  EagerKernelCompiler.hs  MemoryManager.hs
