name:                ViperVM
version:             0.3.0.0
synopsis:            Runtime system for heterogeneous architectures
-- description:         
license:             LGPL-3
license-file:        LICENSE
author:              Sylvain HENRY
maintainer:          hsyl20@gmail.com
-- copyright:           
category:            Control
build-type:          Simple
cabal-version:       >=1.8

data-files: 
  data/Codelets/Blas/Lu.vvm
  apps/samples/lisp/Sample.lisp
  lib/ViperVM/Library/OpenCL/FloatMatrixAdd.cl
  lib/ViperVM/Library/OpenCL/FloatMatrixSub.cl
  lib/ViperVM/Library/OpenCL/FloatMatrixMul.cl
  lib/ViperVM/Library/OpenCL/FloatMatrixTranspose.cl
  lib/ViperVM/Library/OpenCL/FloatMatrixPotrf.cl

library
  exposed-modules:     
    ViperVM

    ViperVM.Backends.Host.Buffer
    ViperVM.Backends.Host.Link
    ViperVM.Backends.Host.Driver

    ViperVM.Backends.OpenCL
    ViperVM.Backends.OpenCL.Driver
    ViperVM.Backends.OpenCL.Buffer
    ViperVM.Backends.OpenCL.Processor
    ViperVM.Backends.OpenCL.Link
    ViperVM.Backends.OpenCL.Kernel
    ViperVM.Backends.OpenCL.CommandQueue
    ViperVM.Backends.OpenCL.Context
    ViperVM.Backends.OpenCL.Event
    ViperVM.Backends.OpenCL.Loader
    ViperVM.Backends.OpenCL.Memory
    ViperVM.Backends.OpenCL.Program
    ViperVM.Backends.OpenCL.Query
    ViperVM.Backends.OpenCL.Types

    ViperVM.Platform
    ViperVM.Platform.Buffer
    ViperVM.Platform.Configuration
    ViperVM.Platform.BufferManager
    ViperVM.Platform.LinkCapabilities
    ViperVM.Platform.KernelParameter
    ViperVM.Platform.TransferResult
    ViperVM.Platform.Descriptor
    ViperVM.Platform.Scheduler
    ViperVM.Platform.Kernel
    ViperVM.Platform.KernelConstraint
    ViperVM.Platform.KernelExecutionResult
    ViperVM.Platform.KernelManager
    ViperVM.Platform.Link
    ViperVM.Platform.LockMode
    ViperVM.Platform.Memory
    ViperVM.Platform.Object
    ViperVM.Platform.ObjectKernel
    ViperVM.Platform.ObjectManager
    ViperVM.Platform.Platform
    ViperVM.Platform.Primitive
    ViperVM.Platform.Processor
    ViperVM.Platform.ProcessorCapabilities
    ViperVM.Platform.Region
    ViperVM.Platform.RegionLockManager
    ViperVM.Platform.RegionTransfer
    ViperVM.Platform.RegionTransferManager
    ViperVM.Platform.Runtime
    ViperVM.Platform.Logger
    ViperVM.Platform.SharedObject
    ViperVM.Platform.SharedObjectManager
    ViperVM.Platform.Event
    ViperVM.Platform.Objects.Vector
    ViperVM.Platform.Objects.Matrix


    ViperVM.Scheduling.Single
    ViperVM.Scheduling.RoundRobin
    ViperVM.Scheduling.Eager

    ViperVM.UserInterface

    ViperVM.Graph.Graph
    ViperVM.Graph.ParallelReducer
    ViperVM.Graph.Builtins

    ViperVM.STM.Common
    ViperVM.STM.TSet
    ViperVM.STM.TList
    ViperVM.STM.TMap
    ViperVM.STM.TIntSet

    ViperVM.Library.FloatMatrixAdd
    ViperVM.Library.FloatMatrixSub
    ViperVM.Library.FloatMatrixMul
    ViperVM.Library.FloatMatrixTranspose
    ViperVM.Library.FloatMatrixPotrf

    ViperVM.Parsing.Parser
    ViperVM.Parsing.Lisp

  other-modules:
    Paths_ViperVM

  build-depends:       
    base ==4.6.*,
    unix ==2.6.*,
    containers ==0.5.0.*,
    transformers ==0.*,
    mtl ==2.*,
    data-lens-template ==2.1.*,
    data-lens == 2.10.*,
    dynamic-linker-template ==0.1.*,
    haskell-src-meta ==0.6.*,
    haskell-src-exts ==1.13.*,
    stm ==2.4.*,
    monad-loops,
    parsec,
    vector,
    clock

  build-tools: 

  ghc-options: -Wall -threaded -O2

  hs-source-dirs: lib

  if os(linux)
    cpp-options: -DCALLCONV=ccall -DCallConv=CCall

  if os(darwin)
    cpp-options: -DCALLCONV=ccall -DCallConv=CCall
    cc-options: "-U__BLOCKS__"

  if os(windows)
    cpp-options: -DCALLCONV=stdcall -DCallConv=StdCall


executable PlatformInfo
  main-is: PlatformInfo.hs
  hs-source-dirs: apps
  ghc-options: -Wall
  build-depends: 
    base,
    ViperVM

executable BufferManagerTest
  main-is: BufferManagerTest.hs
  hs-source-dirs: apps
  ghc-options: -Wall -threaded
  build-depends: 
    base,
    ViperVM

executable RegionLockManagerTest
  main-is: RegionLockManagerTest.hs
  hs-source-dirs: apps
  ghc-options: -Wall -threaded
  build-depends: 
    base,
    stm,
    ViperVM

executable RegionTransferManagerTest
  main-is: RegionTransferManagerTest.hs
  hs-source-dirs: apps
  ghc-options: -Wall -threaded
  build-depends: 
    base,
    containers,
    ViperVM

executable GraphReduce
  main-is: GraphReducer.hs
  hs-source-dirs: apps
  ghc-options: -Wall -threaded
  build-depends: 
    base,
    containers,
    ViperVM

executable LispParser
  main-is: LispParser.hs
  hs-source-dirs: apps
  ghc-options: -Wall -threaded
  build-depends: 
    base,
    containers,
    random,
    ViperVM

executable LispSOCL
  main-is: LispSOCL.hs
  hs-source-dirs: apps
  ghc-options: -Wall -threaded
  build-depends: 
    base,
    containers,
    ViperVM

executable Split
  main-is: Split.hs
  hs-source-dirs: apps
  ghc-options: -Wall -threaded
  build-depends: 
    base,
    containers,
    ViperVM

executable Bench
  main-is: Bench.hs
  hs-source-dirs: apps
  ghc-options: -Wall -threaded -O2
  build-depends: 
    base,
    containers,
    ViperVM

executable LispTest
  main-is: LispTest.hs
  hs-source-dirs: apps
  ghc-options: -Wall -threaded
  build-depends: 
    base,
    containers,
    ViperVM

executable GranularityAdaptation
  main-is: GranularityAdaptation.hs
  hs-source-dirs: apps
  ghc-options: -Wall -threaded
  build-depends: 
    base,
    containers,
    random,
    ViperVM

executable ParseTest
  main-is: ParseTest.hs
  hs-source-dirs: apps
  ghc-options: -Wall
  build-depends: 
    base,
    ViperVM
  other-modules:
    Paths_ViperVM


