name:                ViperVM
version:             0.3.0.0
synopsis:            Runtime system for heterogeneous architectures
-- description:         
license:             LGPL-3
license-file:        LICENSE
author:              Sylvain HENRY
maintainer:          hsyl20@gmail.com
-- copyright:           
category:            Control
build-type:          Simple
cabal-version:       >=1.8

data-files: 
  data/Codelets/Blas/Lu.vvm
  apps/samples/lisp/Sample.lisp
  lib/ViperVM/Library/FloatMatrixAdd/OpenCL.cl
  lib/ViperVM/Library/OpenCL/FloatMatrixSub.cl
  lib/ViperVM/Library/OpenCL/FloatMatrixMul.cl
  lib/ViperVM/Library/OpenCL/FloatMatrixTranspose.cl
  lib/ViperVM/Library/OpenCL/FloatMatrixPotrf.cl
  lib/ViperVM/Library/OpenCL/FloatMatrixTrsm.cl

library
  exposed-modules:     

    ViperVM.Common.Logger
    ViperVM.Common.Region
    ViperVM.Common.Util

    ViperVM.Backends.Host.Memory
    ViperVM.Backends.Host.Buffer
    ViperVM.Backends.Host.Link
    ViperVM.Backends.Host.Driver

    ViperVM.Backends.OpenCL.Driver
    ViperVM.Backends.OpenCL.Buffer
    ViperVM.Backends.OpenCL.Processor
    ViperVM.Backends.OpenCL.Link
    ViperVM.Backends.OpenCL.Kernel
    ViperVM.Backends.OpenCL.CommandQueue
    ViperVM.Backends.OpenCL.Context
    ViperVM.Backends.OpenCL.Event
    ViperVM.Backends.OpenCL.Loader
    ViperVM.Backends.OpenCL.Memory
    ViperVM.Backends.OpenCL.Program
    ViperVM.Backends.OpenCL.Query
    ViperVM.Backends.OpenCL.Types

    ViperVM.Platform.Peer.LinkPeer
    ViperVM.Platform.Peer.MemoryPeer
    ViperVM.Platform.Peer.ProcPeer
    ViperVM.Platform.Peer.PlatformPeer
    ViperVM.Platform.Peer.ProgramPeer
    ViperVM.Platform.Peer.KernelPeer

    ViperVM.Platform.LinkCapabilities
    ViperVM.Platform.ProcessorCapabilities
    ViperVM.Platform.Memory
    ViperVM.Platform.Link
    ViperVM.Platform.Proc
    ViperVM.Platform.Platform
    ViperVM.Platform.Configuration
    ViperVM.Platform.Kernel
    ViperVM.Platform.Compilation
    ViperVM.Platform.Program
    ViperVM.Platform.KernelParameter
    ViperVM.Platform.KernelConstraint
    ViperVM.Platform.Primitive

    ViperVM.VirtualPlatform.Descriptor
    ViperVM.VirtualPlatform.MetaKernel
    ViperVM.VirtualPlatform.MetaMemory
    ViperVM.VirtualPlatform.MetaObject
    ViperVM.VirtualPlatform.MetaObjects.Matrix
    ViperVM.VirtualPlatform.Object
    ViperVM.VirtualPlatform.Objects.Matrix
    ViperVM.VirtualPlatform.Objects.Vector
    ViperVM.VirtualPlatform.Task
    ViperVM.VirtualPlatform.FunctionalKernel


--    ViperVM.Runtime.Runtime


--    ViperVM.Scheduling.Single
--    ViperVM.Scheduling.RoundRobin
--    ViperVM.Scheduling.Eager
--
--    ViperVM.UserInterface

    ViperVM.Graph.Graph
    ViperVM.Graph.ParallelReducer
    ViperVM.Graph.Builtins

    ViperVM.STM.Common
    ViperVM.STM.TSet
    ViperVM.STM.TList
    ViperVM.STM.TMap
    ViperVM.STM.TIntSet

    ViperVM.Library.FloatMatrixAdd.OpenCL
    ViperVM.Library.FloatMatrixAdd.Kernels
    ViperVM.Library.FloatMatrixAdd.MetaKernel
    ViperVM.Library.FloatMatrixAdd.Function

--    ViperVM.Library.FloatMatrixAdd
--    ViperVM.Library.FloatMatrixSub
--    ViperVM.Library.FloatMatrixMul
--    ViperVM.Library.FloatMatrixTranspose
--    ViperVM.Library.FloatMatrixPotrf
--    ViperVM.Library.FloatMatrixTrsm

    ViperVM.Parsing.Parser
    ViperVM.Parsing.Lisp

  other-modules:
    Paths_ViperVM

  build-depends:       
    base ==4.6.*,
    unix ==2.6.*,
    containers ==0.5.0.*,
    transformers ==0.*,
    mtl ==2.*,
    data-lens-template ==2.1.*,
    data-lens == 2.10.*,
    dynamic-linker-template ==0.1.*,
    haskell-src-meta ==0.6.*,
    haskell-src-exts ==1.13.*,
    stm ==2.4.*,
    monad-loops,
    parsec,
    text,
    bytestring,
    split,
    vector,
    clock

  build-tools: 

  ghc-options: -Wall -threaded -O2

  hs-source-dirs: lib

  if os(linux)
    cpp-options: -DCALLCONV=ccall -DCallConv=CCall

  if os(darwin)
    cpp-options: -DCALLCONV=ccall -DCallConv=CCall
    cc-options: "-U__BLOCKS__"

  if os(windows)
    cpp-options: -DCALLCONV=stdcall -DCallConv=StdCall


executable PlatformInfo
  main-is: PlatformInfo.hs
  hs-source-dirs: apps
  ghc-options: -Wall
  build-depends: 
    base,
    ViperVM

executable PlatformTest
  main-is: PlatformTest.hs
  hs-source-dirs: apps
  ghc-options: -Wall
  build-depends: 
    base,
    ViperVM

--executable LispSOCL
--  main-is: LispSOCL.hs
--  hs-source-dirs: apps
--  ghc-options: -Wall -threaded
--  build-depends: 
--    base,
--    containers,
--    ViperVM
--
--executable Split
--  main-is: Split.hs
--  hs-source-dirs: apps
--  ghc-options: -Wall -threaded
--  build-depends: 
--    base,
--    containers,
--    monad-loops,
--    ViperVM
--
--executable Bench
--  main-is: Bench.hs
--  hs-source-dirs: apps
--  ghc-options: -Wall -threaded -O2
--  build-depends: 
--    base,
--    containers,
--    monad-loops,
--    ViperVM
